#96 - make project runnable on JDK 21, minor bug fix - when cloning a user (in error case feedback element with error text was empty)